# ai

./: Makefile  cartpole.py  trainer.py
function-approximation/mlpack/: Makefile  gitman.yml  sin.cpp
function-approximation/torch/: CMakeLists.txt  sin.cpp
mlpack/rl/: Makefile  driver.cpp  gitman.yml  model.json  net.cpp  net.hpp  policy_gradient.hpp  rl.cpp  rl.hpp  structs.hpp  test_policy_gradient.cpp
mlpack/tut/: sin.cpp
openai/: README.md  agent.py  agent_0.py  cart.py  lander.py  learner.py  params.txt.solved
policy-gradient/REINFORCE/: env.py  finite_differencing.py
policy-gradient/REINFORCE/mlpack/: Makefile  driver.cpp  rl.cpp
policy-gradient/REINFORCE/plotting/: alt-gaussian.ggb
policy-gradient/REINFORCE/torch/: CMakeLists.txt  Makefile  Untitled3.ipynb  driver.cpp  env.cpp  env.hpp  net.cpp  net.hpp  param_vis.py  policy.cpp  policy.hpp  rl.cpp  rl.hpp  tests.cpp
pt/: CMakeLists.txt  driver.cpp  net.cpp  net.hpp  renderer.hpp  rl.cpp  rl.hpp
pt/approx/: CMakeLists.txt  sin.cpp
pt/policy-gradient/: Untitled.ipynb  driver.cpp  env.cpp  env.hpp  net.cpp  net.hpp  num_pg.py  renderer.cpp  rl.cpp  rl.hpp  tests.cpp
